# http-tunnelling

./: Cargo.toml  Dockerfile  README.md  build.sh  client-id  client.min.js  minify.sh  package.json  rust-build.sh  tsconfig.json  webpack.client.js  webpack.server.js
.devcontainer/: devcontainer.json
client/: index.js
go-tunnel/: go.mod  main.go
rust-server/: Cargo.toml
rust-server/src/: main.rs  protocol.rs  server.rs
rust/src/: protocol.rs  server.rs  worker.rs
script/: go-install.sh
server/: index.js
src/: client.js  client.ts  config.ts  lib.js  lib.ts  server.js  server.rs  server.ts  worker.rs
test/: index.css  index.html
